syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

package network;

service Network {
    rpc ListDevices (google.protobuf.Empty) returns (DevicesReply);
    rpc ListConnections (google.protobuf.Empty) returns (ConnectionsReply);
    rpc GetConnectionByUUID (ConnectionUUIDRequest) returns (ConnectionReply);
    rpc UpdateConnection(ConnectionBody) returns (ConnectionReply);
}

message ConnectionReply {
    int32 code = 1;
    string msg = 2;
    ConnectionBody data = 3;
}

message ConnectionUUIDRequest {
    string uuid = 1;
}

message DevicesReply {
    int32 code = 1;
    string msg = 2;
    repeated DevicesReplyBody data = 3;
}

message ConnectionItem {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue uuid = 2;
}

message ConnectionsReply {
    int32 code = 1;
    string msg = 2;
    repeated ConnectionBody data = 3;
}

message ConnectionBody {
    string name = 1;
    string uuid = 2;
    google.protobuf.StringValue interface = 3;
    google.protobuf.StringValue mac = 4;
    Netinfo ip4info = 5;
    Netinfo ip6info = 6;
}

message DevicesReplyBody {
    repeated string conn = 1;
    google.protobuf.StringValue dev_path = 2;
    google.protobuf.StringValue device_type = 3;
    google.protobuf.StringValue id_path = 4;
    Netinfo ip4info = 5;
    Netinfo ip6info = 6;
    bool is_managed = 7;
    string mac = 8;
    string name = 9;
    string state = 10;
    bool virtual = 11;
    repeated string net_link_modes = 12;
    google.protobuf.StringValue conn_name = 13;
    google.protobuf.StringValue driver = 14;
    ConnectionItem connection = 15;
}

message Routes {
    string dest = 1;
    uint32 family = 2;
    uint32 metric = 3;
    google.protobuf.StringValue next_hop = 4;
}


message Netinfo {
    repeated string addresses = 1;
    repeated string dns = 2;
    google.protobuf.StringValue gateway = 3;
    google.protobuf.StringValue method = 4;
    repeated Routes routes = 5;
}
